--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   </head>
 
   <body>
-  <div class="container">
-    <h1> This is a placeholder </h1>
-  </div>
 
   <!-- JS libraries -->
   <script src="//d3js.org/d3.v3.min.js"></script>
@@ -17,7 +14,7 @@
   <script src="//d3js.org/topojson.v1.min.js"></script>
 
   <!-- Custom JS code -->
-  <script src="map.js"></script>
+  <script src="script.js"></script>
 
   </body>
 </html>
