switched to tree layout, commented lots out from force

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Never Ending Object Learning (NEOL)</title>
+    <title>Learning Hierarchies of Concepts</title>
     <!-- Custom CSS styles -->
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
