--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                 <button id="answerYES" type="submit" class="btn btn-default">Yes</button>
                 <button id="answerNO" type="submit" class="btn btn-default">No</button>
                 <button id="next_question"type="submit" class="btn btn-default">Next</button>
+                <button type="button" class="btn btn-danger pull-right btn-sm">Video</button>
+                <button id="galleryBTN"type="submit" class="btn btn-info pull-right btn-sm">Gallery</button>
             </div>
         </div>
     <div class="row" id="viz">
@@ -331,11 +333,27 @@
     </script>
     <!-- set start button -->
     <script type="text/javascript">
+        //start scroll down button
         $("#startBTN").click(function() {
             $('html,body').animate({
                 scrollTop: $(".row.log").offset().top},
                 'slow');
         });
+        //
+        var flip =1;
+        $("#galleryBTN").click(function() {
+            flip=!flip
+            if(flip==0)
+            {
+                document.getElementById('viz').style.display="none";
+                $(this).text("back");
+            }else{
+                document.getElementById('viz').style.display="block";
+                $(this).text("gallery");
+
+            }    
+        });
+        
     </script>
 
 </body>
