--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Demo styles -->
     <style>
     body {
-        background: #eee;
+        background: #fff;
         font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
         font-size: 14px;
         color:#000;
@@ -35,7 +35,7 @@
     .swiper-slide {
         text-align: center;
         font-size: 18px;
-        background: #fff;
+        background:  #f9f9f9;
         width: 500px;
         /* Center slide text vertically */
         display: -webkit-box;
@@ -60,13 +60,7 @@
                 stroke: #ccc;
                 stroke-width: 1.5px;
             }
-            .prev {
-              float: left;
-            }
-            .post {
-              float: right;
-              position: relative;
-            }
+
 .svg-container {
     display: inline-block;
     position: relative;
@@ -93,7 +87,6 @@
   position:relative;
   display: inline-block; // display inline with abality to provide width/height
 }​
-
     </style>
 </head>
 <body>
@@ -110,10 +103,8 @@
             </div>
 
         </div>
-    </div>
-<div class="container">    
+   
     <div class="arrange-vertically">
-        <div class="container">    
             <div class="row log" id="vizSection">
                 <div class="well col-md-12">
                     <h2 id="questionTitle">Server Emissions</h2>
@@ -128,9 +119,7 @@
                    <div class="block" id="chart1"></div>
                    <div class="block" id="chart2"></div>
             </div>
-        </div>      
         <!-- Swiper -->
-        <div class="container"> 
             <!-- <title>    -->
             <div class="row log" id="gallerySection">
                 <div class="well col-md-12">
@@ -154,9 +143,7 @@
                 <!-- Add Scrollbar -->
                 <div class="swiper-scrollbar"></div>
             </div>
-        </div>       
         <!-- <animation> -->
-        <div class="container"> 
             <!-- <title>    -->
             <div class="row log" id="animationSection">
                 <div class="well col-md-12">
@@ -179,8 +166,7 @@
                 </div>
                  Add Scrollbar
                 <div class="swiper-scrollbar"></div>
-            </div>
-        </div>      
+            </div>      
     </div>
 </div>    
 
