add some comments

--- a/index.html
+++ b/index.html
@@ -269,10 +269,9 @@
 
     <!-- Visualization -->
     <script type="text/javascript">
-    var dataHistory = []; 
+    var dataHistory = []; //array to restore json tree and question
     var seq = 0; // variable indicates current iteration
     var seqTotal = 10; //set the max number of seq
-    var questionLists;
     var questionTEM;
 
     function createSVG(stage, callback){
