--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <button id="restartBTN" type="submit" class="btn btn-default btn-md">Restart</button>
             <button id="animationBTN"type="button" class="btn btn-success pull-right btn-md">Animation</button>
             <button id="galleryBTN"type="submit" class="btn btn-info pull-right btn-md">Gallery</button>
+            <!-- Ignore progress bar for now, might replace
             <p><div id="slidesProgress" class="progress progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%"> 1% </div></p>
+            -->
         </div>
 
         <!-- Display the current trees -->
