--- a/index.html
+++ b/index.html
@@ -33,105 +33,16 @@
         </div>
     </div>
 
-    <div class="arrange-vertically">
-        <!-- Question box -->
-        <div class="row log well col-md-12" id="vizSection">
-            <h2 id="questionTitle">Question Goes Here</h2>
-            <button id="answerYES" type="submit" class="btn btn-default btn-md">Yes</button>
-            <button id="answerNO" type="submit" class="btn btn-default btn-md">No</button>
-            <button id="next_question"type="submit" class="btn btn-default btn-md">Next</button>
-            <button id="restartBTN" type="submit" class="btn btn-default btn-md">Restart</button>
-            <button id="animationBTN"type="button" class="btn btn-success pull-right btn-md">Animation</button>
-            <button id="galleryBTN"type="submit" class="btn btn-info pull-right btn-md">Gallery</button>
-            <!-- Ignore progress bar for now, might replace
-            <p><div id="slidesProgress" class="progress progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%"> 1% </div></p>
-            -->
-        </div>
-
+    <div class="arrange-vertically" id="timeline">
         <!-- Display the current trees -->
         <div class="row" id="viz">
             <div class="block" id="chart1"></div>
             <div class="block" id="chart2"></div>
         </div>
-
-        <!-- Swiper -->
-
-        <!-- Gallery Section -->
-        <div class="row log" id="gallerySection">
-            <div class="well col-md-12">
-                <h2 id="galleryTITLE">Gallery Slides</h2>
-                <button id="galleryBTNBack"type="submit" class="btn btn-info pull-right btn-lg">Back</button>
-            </div>
-        </div>
-
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide" id="s0">Slide 0</div>
-                <div class="swiper-slide" id="s1">Slide 1</div>
-                <div class="swiper-slide" id="s2">Slide 2</div>
-                <div class="swiper-slide" id="s3">Slide 3</div>
-                <div class="swiper-slide" id="s4">Slide 4</div>
-                <div class="swiper-slide" id="s5">Slide 5</div>
-                <div class="swiper-slide" id="s6">Slide 6</div>
-                <div class="swiper-slide" id="s7">Slide 7</div>
-                <div class="swiper-slide" id="s8">Slide 8</div>
-                <div class="swiper-slide" id="s9">Slide 9</div>
-                <div class="swiper-slide" id="s10">Slide 10</div>
-                <div class="swiper-slide" id="s11">Slide 11</div>
-                <div class="swiper-slide" id="s12">Slide 12</div>
-                <div class="swiper-slide" id="s13">Slide 13</div>
-                <div class="swiper-slide" id="s14">Slide 14</div>
-                <div class="swiper-slide" id="s15">Slide 15</div>
-                <div class="swiper-slide" id="s16">Slide 16</div>
-                <div class="swiper-slide" id="s17">Slide 17</div>
-                <div class="swiper-slide" id="s18">Slide 18</div>
-                <div class="swiper-slide" id="s19">Slide 19</div>
-                <div class="swiper-slide" id="s20">Slide 20</div>
-                <div class="swiper-slide" id="s21">Slide 21</div>
-                <div class="swiper-slide" id="s22">Slide 22</div>
-                <div class="swiper-slide" id="s23">Slide 23</div>
-                <div class="swiper-slide" id="s24">Slide 24</div>
-                <div class="swiper-slide" id="s25">Slide 25</div>
-                <div class="swiper-slide" id="s26">Slide 26</div>
-                <div class="swiper-slide" id="s27">Slide 27</div>
-                <div class="swiper-slide" id="s28">Slide 28</div>
-                <div class="swiper-slide" id="s29">Slide 29</div>
-                <div class="swiper-slide" id="s30">Slide 30</div>
-                <div class="swiper-slide" id="s31">Slide 31</div>
-                <div class="swiper-slide" id="s32">Slide 32</div>
-            </div>
-            <!-- Add Scrollbar -->
-            <div class="swiper-scrollbar"></div>
-        </div>
-
-        <!-- <animation> -->
-        <!-- <title>    -->
-        <div class="row log" id="animationSection">
-            <div class="well col-md-12">
-                <h2 id="galleryTITLE">Video animation</h2>
-                <button id="animationBTNBack"type="submit" class="btn btn-info pull-right btn-lg">Back</button>
-            </div>
-        </div>
-
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide" id="s0">Slide 1</div>
-                <div class="swiper-slide" id="s1">Slide 2</div>
-                <div class="swiper-slide" id="s2">Slide 3</div>
-                <div class="swiper-slide" id="s3">Slide 4</div>
-                <div class="swiper-slide" id="s4">Slide 5</div>
-                <div class="swiper-slide" id="s5">Slide 6</div>
-                <div class="swiper-slide" id="s6">Slide 7</div>
-                <div class="swiper-slide" id="s7">Slide 8</div>
-                <div class="swiper-slide" id="s8">Slide 9</div>
-                <div class="swiper-slide" id="s9">Slide 10</div>
-            </div>
-            <!--Add Scrollbar-->
-            <div class="swiper-scrollbar"></div>
-        </div>      
     </div>
 </div>    
 
 <script src="main.js" type="text/javascript"></script>
 </body>
+
 </html>
