edit some sords in description

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="jumbotron">
             <h1>Interactive Learning for Hierarchy of Concepts</h1>
-            <p>Answering the question, our system forms the hierarchy of concepts steps by steps. In every iteration, the system will throw the most informative question based on current hierarchy.</p>
+            <p>Answering the question, our system forms the hierarchy of concepts steps by steps. In every iteration, the system will throw the actively most informative question based on current hierarchy.</p>
             <p></p>
             <p>Based on prevous work, we focus on solving these problems</p>
             <ol>
@@ -35,7 +35,7 @@
                     <a>Help user to track the change of tree easily</a>
                 </li>
                 <li>
-                    <a>Visualization of hidden edge to provide information when user answers the question</a>
+                    <a>Visualie the hidden edge to provide information when user answers the question</a>
                 </li>
                 <li>
                     <a>Visualize how user's answer is influencial for mahcine learning algorithm to build the hierarchy of concepts</a>
