updated edge highlighting a bit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h1>Interactive Learning for Hierarchy of Concepts</h1>
+            <h1>Interactive Learning for Hierarchies of Concepts</h1>
             <p>Answering the question, our system forms the hierarchy of concepts steps by steps. In every iteration, the system will throw the actively most informative question based on current hierarchy.</p>
             <p></p>
             <p>Based on prevous work, we focus on solving these problems</p>
